--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.scss
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.scss
@@ -1,147 +1,340 @@
-
-
-
-// ==============================================================================================================================
+// // ==============================================================================================================================
 section {
-    border: 1px solid lightgray;
-    margin-bottom: 15px;
-  }
-  
-  .display {
-    display: flex;
-  }
-  
-  .text2 {
-    padding: 0.5rem;
-    font-size: 17px;
-    // color: #202c2c;
-    text-transform: uppercase;
-    color: #300a26;
-    font-weight: 700;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-  }
-  
-  body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: 100vh;
-    background-color: #31a6f4;
-  }
-  
-  .cardContainer {
-    flex-basis: 95%;
-    padding: 10px 20px;
-    // font-family: "Ubuntu", sans-serif;
-    text-transform: capitalize;
-    display: flex;
-    flex-wrap: wrap;
-    background: #cfd1d2;
-    // justify-content: space-between;
-    gap: 4%;
-  }
-  
-  .card {
-    cursor: pointer;
-    padding: 20px;
-    border-radius: 15px;
-    background-color: white;
-    // width: 22%;
-    flex: 1 1 calc(23.33% - 20px);
-    max-width: calc(30.33% - 20px);
-    color: grey;
-    margin: 15px 0;
-    box-shadow: 3px 4px 8px 2px rgba(0, 0, 0, 0.5);
-    // display: flex;
-    display: -webkit-inline-box;
-    // justify-content: space-between;
-    gap: 5%;
-    // box-sizing: border-box;
+  border: 1px solid lightgray;
+  margin-bottom: 15px;
+}
 
+//   .display {
+//     display: flex;
+//   }
+
+.text2 {
+  padding: 0.5rem;
+  font-size: 17px;
+  // color: #202c2c;
+  text-transform: uppercase;
+  color: #300a26;
+  font-weight: 700;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+//   body {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     width: 100vw;
+//     height: 100vh;
+//     background-color: #31a6f4;
+//   }
+
+//   .cardContainer {
+//     flex-basis: 95%;
+//     padding: 10px 20px;
+//     // font-family: "Ubuntu", sans-serif;
+//     text-transform: capitalize;
+//     display: flex;
+//     flex-wrap: wrap;
+//     background: #cfd1d2;
+//     // justify-content: space-between;
+//     gap: 4%;
+//   }
+
+//   .card {
+
+//     cursor: pointer;
+//     padding: 20px;
+//     border-radius: 15px;
+//     background-color: white;
+//     // width: 22%;
+//     flex: 1 1 calc(23.33% - 20px);
+//     max-width: calc(30.33% - 20px);
+//     color: grey;
+//     margin: 15px 0;
+//     box-shadow: 3px 4px 8px 2px rgba(0, 0, 0, 0.5);
+//     // display: flex;
+//     display: -webkit-inline-box;
+//     // justify-content: space-between;
+//     gap: 5%;
+//     // box-sizing: border-box;
+
+//   }
+
+//   .card div {
+//     display: flex;
+//     flex-direction: column;
+//     gap: 10px;
+//     flex-basis: 70%;
+//     text-align: left;
+//   }
+
+//   .card i {
+//     background: #b3f0ff;
+//     color: #00a3cc;
+//     border-radius: 50%;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     height: 35px;
+//     width: 35px;
+//     padding: 15px;
+//     font-size: 20px;
+//   }
+
+//   // .card * {
+//   //   text-wrap: nowrap;
+//   // }
+//   .card strong {
+//     color: black;
+//     font-weight: 500;
+//     font-size: 15px;
+//   }
+
+//   h5 {
+//     padding: 0.5rem;
+//     background-color: #e5f0f0;
+//     border: 2px solid lightgray;
+//   }
+
+//   @media (max-width: 1200px) {
+//     .cardContainer {
+//       justify-content: space-between;
+//       gap: unset;
+//     }
+
+//     .card {
+
+//         flex: 1 1 calc(50% - 20px); /* Two cards per row */
+//         max-width: calc(50% - 20px);
+//     }
+
+//     .display {
+//       display: block;
+//     }
+//   }
+//   @media (max-width: 850px) {
+//     .cardContainer {
+//       justify-content: space-between;
+//       gap: unset;
+//     }
+
+//     .card {
+//         flex: 1 1 calc(70% - 20px); /* Two cards per row */
+//         max-width: calc(49% - 20px);
+//     }
+
+//     .display {
+//       display: block;
+//     }
+//   }
+
+//   @media (max-width: 650px) {
+//     .cardContainer {
+//       justify-content: center;
+//     }
+
+//     .card {
+//         flex: 1 1 100%; /* One card per row */
+//         max-width: 100%;
+//     }
+
+//     .display {
+//       display: block;
+//     }
+//   }
+
+// // ============================================================================================
+
+// .royal-card {
+//   position: relative;
+//   background-size: cover;
+//   background-position: center;
+//   // border: 1px solid #3d3d3d; /* Gold border for a royal feel */
+//   border-radius: 15px;
+//   padding: 20px;
+//   color: white;
+//   font-family: 'Times New Roman', Times, serif; /* Elegant font */
+//   text-align: center;
+//   // box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+//   box-shadow: 3px 4px 8px 2px rgba(0, 0, 0, 0.5);
+//   transition: transform 0.3s ease, box-shadow 0.3s ease;
+// }
+
+// .royal-card:hover {
+//   transform: scale(1.05); /* Slight zoom-in effect on hover */
+//   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+// }
+
+// .royal-icon {
+//   font-size: 30px;
+//   color: #7cfaf4; /* Gold color for the icon */
+//   margin-bottom: 10px;
+// }
+
+// .royal-content {
+//   font-size: 18px;
+//   font-weight: bold;
+//   margin-bottom: 15px;
+// }
+
+// .tooltip {
+//   position: absolute;
+//   bottom: 10px;
+//   left: 50%;
+//   transform: translateX(-50%);
+//   padding: 5px 10px;
+//   background-color: rgba(0, 0, 0, 0.6);
+//   color: #f3f2eb; /* Gold tooltip text */
+//   font-size: 14px;
+//   border-radius: 20px;
+//   opacity: 0;
+//   transition: opacity 0.3s ease;
+// }
+
+// .royal-card:hover .tooltip {
+//   opacity: 1; /* Show tooltip on hover */
+// }
+
+
+/* Card container */
+.cardContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2%;
+  // justify-content: space-between;
+  padding: 10px 20px;
+  // background: #cfd1d2;
+}
+
+/* Individual cards */
+.card {
+  cursor: pointer;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: rgb(212, 241, 239);
+  // background-image: url('/assets/images/icons/images.jpeg');
+  background-size: cover;
+  background-position: center;
+  flex: 1 1 calc(33% - 20px);
+  max-width: calc(33.33% - 20px);
+  color: grey;
+  margin: 15px 0;
+  box-shadow: 3px 4px 8px 2px rgba(0, 0, 0, 0.5);
+  display: -webkit-inline-box;
+
+  gap: 15px;
+  align-items: center;
+  /* Vertically center the items */
+  justify-content: flex-start;
+  /* Align items to the left */
+  position: relative;
+}
+
+// .card{
+//   display:-webkit-inline-box;
+// }
+.card div {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex-basis: 70%;
+  text-align: left;
+}
+
+.card i {
+  font-size: 25px;
+  color: #00566b;
+  // background: #b3f0ff;
+  border-radius: 50%;
+  // padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card strong {
+  color: black;
+  font-weight: 500;
+  font-size: 15px;
+}
+
+.card .royal-content {
+  font-size: 18px;
+  font-weight: bold;
+  color: black;
+}
+
+.royal-card {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+  // padding: 20px;
+  color: white;
+  font-family: 'Times New Roman', Times, serif;
+  text-align: left;
+  // /* Align text left for better positioning */
+  box-shadow: 3px 2px 0px 1px rgba(44, 44, 44, 0.5);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.royal-card:hover {
+  transform: scale(1.05);
+  /* Slight zoom-in effect on hover */
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+}
+
+.card .tooltip {
+  position: absolute;
+  bottom: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  padding: 5px 10px;
+  border-radius: 10px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.card:hover .tooltip {
+  opacity: 1;
+}
+
+.royal-card:hover .tooltip {
+  opacity: 1;
+  /* Show tooltip on hover */
+}
+
+
+/* Responsive media queries */
+@media (max-width: 1200px) {
+  .card {
+    flex: 1 1 calc(50% - 20px);
+    /* Two cards per row on medium screens */
+    max-width: calc(50% - 20px);
   }
-  
-  .card div {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    flex-basis: 70%;
-    text-align: left;
+}
+
+@media (max-width: 850px) {
+  .card {
+    flex: 1 1 calc(90%);
+    /* Two cards per row on tablets */
+    max-width: calc(90%);
   }
-  
+}
+
+@media (max-width: 650px) {
+  .card {
+    flex: 1 1 100%;
+    /* One card per row on mobile */
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 350px) {
   .card i {
-    background: #b3f0ff;
-    color: #00a3cc;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 35px;
-    width: 35px;
-    padding: 15px;
-    font-size: 20px;
+    display: none;
   }
-  
-  // .card * {
-  //   text-wrap: nowrap;
-  // }
-  .card strong {
-    color: black;
-    font-weight: 500;
-    font-size: 15px;
-  }
-  
-  h5 {
-    padding: 0.5rem;
-    background-color: #e5f0f0;
-    border: 2px solid lightgray;
-  }
-  
-  @media (max-width: 1200px) {
-    .cardContainer {
-      justify-content: space-between;
-      gap: unset;
-    }
-  
-    .card {
-        flex: 1 1 calc(60% - 20px); /* Two cards per row */
-        max-width: calc(49% - 20px);
-    }
-  
-    .display {
-      display: block;
-    }
-  }
-  @media (max-width: 850px) {
-    .cardContainer {
-      justify-content: space-between;
-      gap: unset;
-    }
-  
-    .card {
-        flex: 1 1 calc(60% - 20px); /* Two cards per row */
-        max-width: calc(49% - 20px);
-    }
-  
-    .display {
-      display: block;
-    }
-  }
-  
-  @media (max-width: 650px) {
-    .cardContainer {
-      justify-content: center;
-    }
-  
-    .card {
-        flex: 1 1 100%; /* One card per row */
-        max-width: 100%;
-    }
-  
-    .display {
-      display: block;
-    }
-  }
-  
+}
