--- a/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
@@ -118,7 +118,7 @@
             <div class="col-12 display align-items-center">
                 <div class="col-12 col-md-12  justify-content-center align-items-center  ">
 
-                    <div class="input_box display mb-3">
+                    <div class=" display mb-3">
                         <div class="col-12 col-md-6 sidename">
                             <span for="">Select Date</span>
                         </div>
