--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -34,36 +34,38 @@
                     <div class="tooltip">COMBO PACKAGE </div>
                 </div>
             </div> -->
-      
-      
+
+
             <div class="cardContainer">
-                <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('package')" >
+                <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('package')">
                     <i class="fas fa-layer-group royal-icon"></i>
                     <div class="royal-content">
-                        <strong>Logs of Creation and Modification  of  <br> Packages</strong>
+                        <strong>Logs of Creation and Modification of <br> Packages</strong>
                     </div>
                     <div class="tooltip">PACKAGE MODIFICATION</div>
                 </div>
-            
+
                 <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('addon_package')">
                     <i class="fas fa-cube royal-icon"></i>
-                    <div><strong>Logs of Creation and modification of   addon <br> packages for any particular period</strong></div>
+                    <div><strong>Logs of Creation and modification of addon <br> packages for any particular
+                            period</strong></div>
                     <div class="tooltip">ADDON PACKAGE MODIFICATION</div>
                 </div>
-            
+
                 <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('channel_history')">
                     <i class="fas fa-calendar-alt royal-icon"></i>
-                    <div><strong>Logs of Creation and modification of <br> Channels for any particular period</strong></div>
+                    <div><strong>Logs of Creation and modification of <br> Channels for any particular period</strong>
+                    </div>
                     <div class="tooltip">CHANNEL UPDATE HISTORY LOG</div>
                 </div>
-            
+
                 <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('combo')">
                     <i class="fas fa-file-invoice royal-icon"></i>
                     <div><strong>Combo Package Report</strong></div>
                     <div class="tooltip">COMBO PACKAGE</div>
                 </div>
             </div>
-            
+
         </mat-expansion-panel>
     </mat-accordion>
 </section>
@@ -78,7 +80,7 @@
                 <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('bouquetAlacarte')">
                     <i class="fas fa-rocket"></i>
                     <div class="display">
-                        <strong>Historical Package/Addon/Alacarte report <br> (Product Type Wise)</strong> 
+                        <strong>Historical Package/Addon/Alacarte report <br> (Product Type Wise)</strong>
                     </div>
                     <div class="tooltip">BOUQUET ALACARTE PACKAGE REPORT</div>
                 </div>
@@ -97,17 +99,17 @@
                     <div><strong>As on Date Active/Deactive Subscription <br> Report (Addon Package)</strong> </div>
                     <div class="tooltip">ADDON PACKAGE</div>
                 </div>
-                <!-- <div class="card tooltip-container" (click)="openSubscriptionDialogue('alacarte')"><i
+                <div class="card royal-card tooltip-container" (click)="openSubscriptionDialogue('alacarte')"><i
                         class="fas fa-file-alt"></i>
                     <div><strong>As on Date Active/Deactive Subscription Report (Alacarte)</strong> </div>
                     <div class="tooltip"> A-LA-CARTE ACTIVE/DEACTIVE </div>
                 </div>
-                <div class="card tooltip-container" (click)="openSubscriptionDialogue('date_subscription')"><i
-                        class="fas fa-file-alt"></i>
-                    <div><strong>As on Date Active/Deactive Subscription Report (All Type of Products)</strong> </div>
+                <div class="card royal-card tooltip-container" (click)="openSubscriptionDialogue('date_subscription')">
+                    <i class="fas fa-file-alt"></i>
+                    <div><strong>As on Date Active/Deactive Subscription <br> Report (All Type of Products)</strong> </div>
                     <div class="tooltip">AS ON DATE ACTIVE/DEACTIVE (ALL TYPES OF PRODUCTS) </div>
                 </div>
-                <div class="card tooltip-container" (click)="openPackageBaseDialogue('Synchronization')"><i
+                <!-- <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('Synchronization')"><i
                         class="fas fa-file-alt"></i>
                     <div><strong>Synchronization Report</strong> </div>
                     <div class="tooltip">SYNCHRONIZATION</div>
@@ -124,45 +126,60 @@
                 <mat-panel-title class="text2">Broadcaster Reports</mat-panel-title>
             </mat-expansion-panel-header>
             <div class="cardContainer">
-                <div class="card" (click)="openBroadcasterDialogue('monthly_broad')"><i class="fas fa-check-circle"></i>
+                <div class="card royal-card tooltip-container" (click)="openBroadcasterDialogue('monthly_broad')"><i
+                        class="fas fa-check-circle"></i>
                     <div><strong>Monthly Broadcaster Reception</strong> </div>
+                    <div class="tooltip">MONTHLY REPORD</div>
                 </div>
-                <div class="card"><i class="fas fa-tv"></i>
+                <div class="card royal-card tooltip-container"><i class="fas fa-tv"></i>
                     <div><strong>Over All Product Report</strong> </div>
+                    <div class="tooltip">OVER ALL PRODUCT </div>
                 </div>
-                <div class="card"><i class="fas fa-file-upload"></i>
+                <div class="card royal-card tooltip-container"><i class="fas fa-file-upload"></i>
                     <div><strong>Over All Base Product Report / Universal Count Report</strong> </div>
+                    <div class="tooltip">UNIVERSAL COUNT PRODUCT </div>
+
                 </div>
-                <div class="card"><i class="fas fa-store"></i>
+                <div class="card royal-card tooltip-container"><i class="fas fa-store"></i>
                     <div><strong>Over All Base Product Report</strong> </div>
+                    <div class="tooltip">OVER ALL BASE PRODUCT REPORD</div>
+
                 </div>
-                <div class="card"><i class="fas fa-boxes"></i>
+                <div class="card royal-card tooltip-container"><i class="fas fa-boxes"></i>
                     <div><strong>Monthly Broadcaster Caswise Report</strong> </div>
+                    <div class="tooltip">MONTHLY BRAODCASTER CASWISE</div>
                 </div>
 
             </div>
         </mat-expansion-panel>
     </mat-accordion>
 </section> -->
-<!-- --------------------------------History Reports--------------------------------------------------------
-<section>
+<!-- --------------------------------History Reports-------------------------------------------------------- -->
+<!-- <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
             <mat-expansion-panel-header>
                 <mat-panel-title class="text2">History Reports</mat-panel-title>
             </mat-expansion-panel-header>
             <div class="cardContainer">
-                <div class="card"><i class="fas fa-check-circle"></i>
+                <div class="card royal-card tooltip-container" (click)="openHistoryDialog(1)"><i
+                        class="fas fa-check-circle"></i>
                     <div><strong>All Service Report</strong> </div>
+                    <div class="tooltip">ALL SERVICE REPORT</div>
                 </div>
-                <div class="card"><i class="fas fa-tv"></i>
+                <div class="card royal-card tooltip-container" (click)="openHistoryDialog(2)"><i class="fas fa-tv"></i>
                     <div><strong>Total Smartcard List Report</strong> </div>
+                    <div class="tooltip">TOTAL SMARTCARD REPORT</div>
                 </div>
-                <div class="card"><i class="fas fa-file-upload"></i>
+                <div class="card royal-card tooltip-container" (click)="openHistoryDialog(3)"><i
+                        class="fas fa-file-upload"></i>
                     <div><strong>Paired Smartcard/Boxid Report</strong> </div>
+                    <div class="tooltip">PAIRED SMARTCARD/BOXID</div>
                 </div>
-                <div class="card"><i class="fas fa-store"></i>
+                <div class="card royal-card tooltip-container" (click)="openHistoryDialog(4)"><i
+                        class="fas fa-store"></i>
                     <div><strong>Block List Report</strong> </div>
+                    <div class="tooltip">BLOCK LISY REPORT</div>
                 </div>
             </div>
         </mat-expansion-panel>
@@ -189,27 +206,30 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section> -->
-<!-- -------------------------------CAS operation reports (Historical Reports)-----------------------------------------------------
-<section>
+<!-- -------------------------------CAS operation reports (Historical Reports)----------------------------------------------------- -->
+<!-- <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
             <mat-expansion-panel-header>
                 <mat-panel-title class="text2">CAS operation reports (Historical Reports)</mat-panel-title>
             </mat-expansion-panel-header>
             <div class="cardContainer">
-                <div class="card"><i class="fas fa-check-circle"></i>
+                <div class="card royal-card tooltip-container" (click)="openHistoryDialog(5)"><i class="fas fa-check-circle"></i>
                     <div><strong>Scroll History Report</strong> </div>
+                    <div class="tooltip">SCROLL REPORT</div>
                 </div>
-                <div class="card"><i class="fas fa-tv"></i>
+                <div class="card royal-card tooltip-container" (click)="openHistoryDialog(6)"><i class="fas fa-tv"></i>
                     <div><strong>Mail History Report</strong> </div>
+                    <div class="tooltip">MAIL REPORT</div>
                 </div>
-                <div class="card"><i class="fas fa-file-upload"></i>
+                <div class="card royal-card tooltip-container" (click)="openHistoryDialog(7)"><i class="fas fa-file-upload"></i>
                     <div><strong>Finger History Report</strong> </div>
+                    <div class="tooltip">FINGER PRINT REPORT</div>
                 </div>
-                <div class="card"><i class="fas fa-store"></i>
+                <div class="card royal-card tooltip-container" (click)="openHistoryDialog(8)"><i class="fas fa-store"></i>
                     <div><strong>Message History Report</strong> </div>
+                    <div class="tooltip">MESSAGE REPORT</div>
                 </div>
-
             </div>
         </mat-expansion-panel>
     </mat-accordion>
