--- a/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
@@ -112,7 +112,7 @@
         <span class="span">BOUQUET ALACARTE PACKAGE REPORT</span>
         <i class="fa fa-close close-icon" (click)="onNoClick()"></i>
     </div>
-        <div class="container">
+    <div class="container">
         <div class="card d-block justify-content-center align-items-center mb-3"
             style="border: 1px solid #055478;padding: 1rem;">
             <div class="col-12 display align-items-center">
@@ -120,7 +120,7 @@
 
                     <div class=" display mb-3">
                         <div class="col-12 col-md-6 sidename">
-                            <span for="">Select Date</span>
+                            <span style="color: #243359;" for="">Select Date</span>
                         </div>
                         <div class="col-12 col-md-6">
                             <mat-form-field appearance="outline" style="width: 100%;">
@@ -176,9 +176,9 @@
             style="border: 1px solid #055478;padding: 1rem;">
             <div class="col-12 display align-items-center">
                 <div class="col-12 col-md-12  justify-content-center align-items-center  ">
-                    <div class="input_box display mb-3">
+                    <div class=" display mb-3">
                         <div class="col-12 col-md-6 mb-2">
-                            <span for="">File Upload</span>
+                            <span style="color: #243359;" for="">File Upload</span>
                         </div>
                         <div class="col-12 col-md-6">
                             <label class="btn custom-btn mb-2">
@@ -189,9 +189,9 @@
 
                         </div>
                     </div>
-                    <div class="input_box display mb-3">
+                    <div class=" display mb-3">
                         <div class="col-12 col-md-6 sidename">
-                            <span for="">Select Date</span>
+                            <span style="color: #243359;" for="">Select Date</span>
                         </div>
                         <div class="col-12 col-md-6">
                             <mat-form-field appearance="outline" style="width: 100%;">
