--- a/src/app/admin/features/channel_setting/Reports_page/Trai/subscription-based/subscription-based.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/subscription-based/subscription-based.component.html
@@ -33,9 +33,9 @@
                             <span style="color: #243359;">Select a Date</span>
                         </div>
                         <div class="col-12 col-md-6">
-                            <mat-form-field class="input-field" appearance="outline" (dateChange)="logValues()">
+                            <mat-form-field class="input-field" appearance="outline">
                                 <mat-label>Choose a date</mat-label>
-                                <input matInput [matDatepicker]="picker" [(ngModel)]="date" placeholder="Select a Date"
+                                <input matInput [matDatepicker]="picker"  (dateChange)="logValues()" [(ngModel)]="date" placeholder="Select a Date"
                                     readonly>
                                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-datepicker #picker></mat-datepicker>
